# generador-de-password

./: .gitignore  README.md  app.py  build.sh  main.py  pyproject.toml  walkthrough.md
doc/plan/: 2026-02-26-mypass-portable.md
src/: config.py  db.py
src/routers/: __init__.py  breach.py  events.py  generator.py  import_export.py  passwords.py  stats.py
src/services/: auth.py  breach_checker.py  password_generator.py  stats.py
static/: index.html  script.js
static/js/: api.js  app.js  auth.js  dashboard.js  generator.js  import-export.js  ui.js  vault.js
tests/: test_config.py  test_db.py  test_main.py
