[project]
name = "password"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.133.0",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
